# algoritmi-majas-darbi

AK-IT-P-Ns-2_Antons_Cvetkovs_md1/: diagramma.xlsx  resuzltāti.csv  values.csv
AK-IT-P-Ns-2_Antons_Cvetkovs_md1/MD1/: CMakeLists.txt  GenerateCsv.cpp  GenerateCsv.h  Menu.cpp  Menu.h  QuickSort.cpp  QuickSort.h  main.cpp
AK-IT-P-Ns-2_Antons_Cvetkovs_md2/: CMakeLists.txt  Constants.h  Coordinates.cpp  Coordinates.h  LinkedList.cpp  LinkedList.h  Menu.cpp  Menu.h  main.cpp
AK-IT-P-Ns-2_Antons_Cvetkovs_md3/: CMakeLists.txt  Constants.h  Helpers.h  Menu.h  Node.h  Tree.h  main.cpp
