cmake_minimum_required(VERSION 3.26)
project(AK_IT_P_Ns_2_Antons_Cvetkovs_md2)

set(CMAKE_CXX_STANDARD 23)

add_executable(AK_IT_P_Ns_2_Antons_Cvetkovs_md2 main.cpp
        Menu.cpp
        Menu.h
        Constants.h
        LinkedList.h
        LinkedList.cpp
        Coordinates.cpp
        Coordinates.h)
